# gstreamer-cpp-library

./: .gitignore  CMakeLists.txt  README.md
cmake/: GStreamerCppLibrary.pc.in  GStreamerCppLibraryConfig.cmake.in  cmake_uninstall.cmake.in  gstcppConfig.cmake.in
examples/: custompipeline.cpp  multiunicastlive.cpp  pngtovideo(copyversion)25fps.cpp  pngtovideo.cpp  pngtovideo2.cpp  pngtovideo25fps.cpp  rtspserver.cpp  usemediacontroller.cpp  videoplayer.cpp  windowscam.cpp  windowsscreen.cpp
include/: GstreamerManager.h  PDFRenderer.h  PDFRenderer1.h  PDFRenderer2.h  PDFRendererToPNG.h  PipelineBuilder.h
include/GStreamer/: Manager.hpp  MediaController.hpp  PipelineBuilder.hpp
include/GStreamerRTSPServer/: Manager.hpp  MediaHub.hpp  PipelineBuilder.hpp
include/Poppler/: PDFRendererToPNG.hpp
src/: GstreamerManager.cpp  PDFRenderer.cpp  PDFRenderer1.cpp  PDFRenderer2.cpp  PDFRendererToPNG.cpp  PipelineBuilder.cpp
src/GStreamer/: Manager.cpp  MediaController.cpp  PipelineBuilder.cpp
src/GStreamerRTSPServer/: Manager.cpp  MediaHub.cpp  PipelineBuilder.cpp
src/Poppler/: PDFRendererToPNG.cpp
